compiler/testData/diagnostics/tests/multiplatform/headerClass/explicitConstructorDelegation.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// MODULE: m1-common
// FILE: common.kt
expect open class <!NO_ACTUAL_FOR_EXPECT!>A<!> {
    constructor(s: String)

    constructor(n: Number) : <!EXPECTED_CLASS_CONSTRUCTOR_DELEGATION_CALL!>this<!>("A")
}

expect class <!NO_ACTUAL_FOR_EXPECT!>B<!> : A {
    constructor(i: Int)

    constructor() : <!EXPECTED_CLASS_CONSTRUCTOR_DELEGATION_CALL!>super<!>("B")
}
